--- a/pages/miembros.html
+++ b/pages/miembros.html
@@ -3,123 +3,166 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Stray Kids</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <html lang="es">
-    <link rel="stylesheet" href="../css/estilos.css">
-    <script src="https://kit.fontawesome.com/5c115362c8.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../src/straykidslogo.png">
+    <title>Stray Kids</title>
+    <script src="https://kit.fontawesome.com/5c115362c8.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="../index.html"><img src="../src/straykidslogo.png" alt="Logo de Stray Kids" /></a>
+            <a href="../index.html"><img src="../src/straykidslogo2.png" alt="Logo de Stray Kids" /></a>
         </div>
-        <nav>
-            <ul class="navegador">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/miembros.html">Miembros</a></li>
-                <li><a href="../pages/discografia.html">Discografia</a></li>
-                <li><a href="../pages/tour.html">Tour</a></li>
-                <li><a href="../pages/contenido.html">Contenido</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-md">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#boton_menu"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span><i class="fa-solid fa-bars fa-xs" style="color: #ffffff;"></i></span>
+                </button>
+                <div class="collapse navbar-collapse" id="boton_menu">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/miembros.html">Miembros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/discografia.html">Discografía</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/tour.html">Tour</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/contenido.html">Contenido</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="buscador collapse navbar-collapse" id="boton_menu">
+                <form>
+                    <input type="text" name="buscador" placeholder="Buscar...">
+                    <button><i class="fa-solid fa-magnifying-glass fa-xs"></i></button>
+                </form>
+            </div>
         </nav>
-        <div class="buscador">
-            <form>
-                <input type="text" name="buscador" placeholder="Buscar...">
-                <button><i class="fa-solid fa-magnifying-glass fa-xs"></i></button>
-            </form>
-        </div>
     </header>
-    <main>
+    <main class="container">
         <section id="Miembros">
-            <div class="Bangchan">
-                <img src="https://picsum.photos/64" alt="">
-                <p>Christopher Bang (Seúl, 3 de octubre de 1997), más conocido como Bang Chan (방찬), es un cantante,
-                    compositor, rapero y productor surcoreano.​ Es conocido por crear y formar parte del grupo Stray
-                    Kids, donde se desempeña como líder, vocalista, rapero, letrista, compositor y productor. Antes de
-                    debutar en el grupo, él y otros dos integrantes, Changbin y Han, formaron un trío de hip-hop,
-                    3Racha, donde utiliza el alias CB97.
-                    Bang Chan, además, se posiciona en la lista de KOMCA con más de 150 canciones acreditadas bajo su
-                    nombre.</p>
+            <div class="titulo_miembros">
+                <h2>Miembros</h2>
+            </div>
+            <div class="integrantes">
+                <div class="Bangchan">
+                    <img src="https://picsum.photos/64" alt="">
+                    <p>Christopher Bang (Seúl, 3 de octubre de 1997), más conocido como Bang Chan (방찬), es un cantante,
+                        compositor, rapero y productor surcoreano.​ Es conocido por crear y formar parte del grupo Stray
+                        Kids, donde se desempeña como líder, vocalista, rapero, letrista, compositor y productor. Antes
+                        de
+                        debutar en el grupo, él y otros dos integrantes, Changbin y Han, formaron un trío de hip-hop,
+                        3Racha, donde utiliza el alias CB97.
+                        Bang Chan, además, se posiciona en la lista de KOMCA con más de 150 canciones acreditadas bajo
+                        su
+                        nombre.</p>
                     <!--ref: https://es.wikipedia.org/wiki/Bang_Chan-->
-            </div>
-            <div class="Hyunjin">
-                <img src="https://picsum.photos/64" alt="">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
-                    iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
-                    quidem provident ipsam laboriosam!</p>
-            </div>
-            <div class="Leeknow">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
-                    iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
-                    quidem provident ipsam laboriosam!</p>
-                <img src="https://picsum.photos/64" alt="">
-            </div>
-            <div class="Han">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
-                    iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
-                    quidem provident ipsam laboriosam!</p>
-                <img src="https://picsum.photos/64" alt="">
-            </div>
-            <div class="Changbin">
-                <img src="https://picsum.photos/64" alt="">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
-                    iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
-                    quidem provident ipsam laboriosam!</p>
-            </div>
-            <div class="Seungmin">
-                <img src="https://picsum.photos/64" alt="">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
-                    iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
-                    quidem provident ipsam laboriosam!</p>
-            </div>
-            <div class="IN">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
-                    iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
-                    quidem provident ipsam laboriosam!</p>
-                <img src="https://picsum.photos/64" alt="">
-            </div>
-            <div class="Felix">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
-                    iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
-                    quidem provident ipsam laboriosam!</p>
-                <img src="https://picsum.photos/64" alt="">
+                </div>
+                <div class="Hyunjin">
+                    <img src="https://picsum.photos/64" alt="">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
+                        iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
+                        quidem provident ipsam laboriosam!</p>
+                </div>
+                <div class="Leeknow">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
+                        iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
+                        quidem provident ipsam laboriosam!</p>
+                    <img src="https://picsum.photos/64" alt="">
+                </div>
+                <div class="Han">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
+                        iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
+                        quidem provident ipsam laboriosam!</p>
+                    <img src="https://picsum.photos/64" alt="">
+                </div>
+                <div class="Changbin">
+                    <img src="https://picsum.photos/64" alt="">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
+                        iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
+                        quidem provident ipsam laboriosam!</p>
+                </div>
+                <div class="Seungmin">
+                    <img src="https://picsum.photos/64" alt="">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
+                        iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
+                        quidem provident ipsam laboriosam!</p>
+                </div>
+                <div class="IN">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
+                        iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
+                        quidem provident ipsam laboriosam!</p>
+                    <img src="https://picsum.photos/64" alt="">
+                </div>
+                <div class="Felix">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
+                        iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
+                        quidem provident ipsam laboriosam!</p>
+                    <img src="https://picsum.photos/64" alt="">
+                </div>
             </div>
         </section>
-
     </main>
-    <footer class="pie_pagina">
-        <div class="grupo_1">
-            <div class="suscribirse">
+    <footer class="pie_pagina container-fluid">
+        <div class="grupo_1 row">
+            <div class="suscribirse col-xl-6 d-flex align-items-center d-flex justify-content-center">
                 <form>
                     <input type="email" name="suscribirse" placeholder="Ingresa aqui tu e-mail...">
                     <input type="submit" value="Enviar">
                 </form>
             </div>
-            <div class="iconos">
-                <a href="https://open.spotify.com/intl-es/artist/2dIgFjalVxs4ThymZ67YCE" class="fa-brands fa-spotify"
-                    target="_blank"></a>
-                <a href="https://web.facebook.com/JYPEStrayKids/?_rdc=1&_rdr" class="fa-brands fa-facebook"
-                    target="_blank"></a>
-                <a href="https://www.instagram.com/realstraykids/?hl=es" class="fa-brands fa-instagram"
-                    target="_blank"></a>
-                <a href="https://www.youtube.com/channel/UC9rMiEjNaCSsebs31MRDCRA" class="fa-brands fa-youtube"
-                    target="_blank"></a>
+            <div class="iconos col-xl-6">
+                <ul class="nav d-flex justify-content-center">
+                    <li class="nav-link">
+                        <a href="https://open.spotify.com/intl-es/artist/2dIgFjalVxs4ThymZ67YCE"
+                            class="fa-brands fa-spotify" target="_blank"></a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="https://web.facebook.com/JYPEStrayKids/?_rdc=1&_rdr" class="fa-brands fa-facebook"
+                            target="_blank"></a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="https://www.instagram.com/realstraykids/?hl=es" class="fa-brands fa-instagram"
+                            target="_blank"></a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="https://www.youtube.com/channel/UC9rMiEjNaCSsebs31MRDCRA" class="fa-brands fa-youtube"
+                            target="_blank"></a>
+                    </li>
+                </ul>
             </div>
         </div>
         <div class="grupo_2">
-            <div class="lema">
+            <div class="lema row">
                 <p><strong> Stray Kids everywhere all around the world, you make Stray Kids Stay.</strong>
                 </p>
             </div>
-            <div class="small">
+            <div class="small row">
                 <p> Pagina web sin fines de lucro o comerciales </p>
             </div>
         </div>
+
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
