Correcciones pagina Tour y botones

--- a/pages/tour.html
+++ b/pages/tour.html
@@ -60,30 +60,64 @@
         <div class="titulo_tour">
             <h2>World Tour</h2>
         </div>
-        <div class="fechas">
-            <p>7 Febrero | Miami | EEUU</p> <button>Tickets</button>
+        <div class="fechas row">
+            <div class="col-md-6">
+                <p>07 Febrero | Miami, EEUU</p>
+            </div>
+            <div class="col-md-6"> <a href="https://www.puntoticket.com/" target="_blank"><button>Tickets</button></a>
+            </div>
         </div>
-        <div class="fechas">
-            <p>15 Febrero | Santiago | Chile</p> <button>Tickets</button>
+        <div class="fechas row">
+            <div class="col-md-6">
+                <p>15 Febrero | Santiago, Chile</p>
+            </div>
+            <div class="col-md-6"> <a href="https://www.puntoticket.com/" target="_blank"><button>Tickets</button></a>
+            </div>
         </div>
-        <div class="fechas">
-            <p>5 Marzo | Buenos Aires | Argentina</p> <button>Tickets</button>
+        <div class="fechas row">
+            <div class="col-md-6">
+                <p>05 Marzo | Buenos Aires</p>
+            </div>
+            <div class="col-md-6"> <a href="https://www.puntoticket.com/" target="_blank"><button>Tickets</button></a>
+            </div>
         </div>
-        <div class="fechas">
-            <p>15 Marzo | Lima | Peru</p> <button>Tickets</button>
+        <div class="fechas row">
+            <div class="col-md-6">
+                <p>15 Marzo | Lima, Perú</p>
+            </div>
+            <div class="col-md-6"> <a href="https://www.puntoticket.com/" target="_blank"><button>Tickets</button></a>
+            </div>
         </div>
-        <div class="fechas">
-            <p>2 Abril | Ciudad de México | México</p> <button>Tickets</button>
+        <div class="fechas row">
+            <div class="col-md-6">
+                <p>02 Abril | Ciudad de México, México</p>
+            </div>
+            <div class="col-md-6"> <a href="https://www.puntoticket.com/" target="_blank"><button>Tickets</button></a>
+            </div>
         </div>
-        <div class="fechas">
-            <p>15 Abril | Tokio | Japón</p> <button>Tickets</button>
+        <div class="fechas row">
+            <div class="col-md-6">
+                <p>15 Abril | Tokio, Japón</p>
+            </div>
+            <div class="col-md-6"> <a href="https://www.puntoticket.com/" target="_blank"><button>Tickets</button></a>
+            </div>
         </div>
-        <div class="fechas">
-            <p>20 Abril | Seul | Corea del Sur</p> <button>Tickets</button>
+        <div class="fechas row">
+            <div class="col-md-6">
+                <p>20 Abril | Seúl, Corea del Sur</p>
+            </div>
+            <div class="col-md-6"> <a href="https://www.puntoticket.com/" target="_blank"><button>Tickets</button></a>
+            </div>
+        </div>
+        <div class="fechas row">
+            <div class="col-md-6">
+                <p>25 Abril | Busan, Corea del Sur</p>
+            </div>
+            <div class="col-md-6"> <a href="https://www.puntoticket.com/" target="_blank"><button>Tickets</button></a>
+            </div>
         </div>
     </main>
     <footer class="pie_pagina container-fluid">
-
         <div class="grupo_1 row">
             <div class="suscribirse col-xl-6 d-flex align-items-center d-flex justify-content-center">
                 <form>
