--- a/index.html
+++ b/index.html
@@ -65,18 +65,20 @@
                 <div class="hero">
                     <h1>Stray Kids</h1>
                 </div>
-                <p>Stray Kids es un grupo masculino surcoreano formado en 2017 por JYP Entertainment
+                <p><strong>Stray Kids</strong> es un grupo masculino surcoreano formado en 2017 por JYP Entertainment
                     a través del reality show Stray Kids. El grupo está compuesto actualmente por ocho miembros:
-                    Bang Chan, Lee Know, Changbin, Hyunjin, Han, Felix, Seungmin y I.N.​ Originalmente un grupo
-                    de nueve, el integrante Kim Woo-jin dejaría el grupo y la agencia por motivos no especificados
-                    en octubre de 2019. Stray Kids lanzó su extended play predebut Mixtape el 8 de enero de 2018
-                    e hizo su debut oficial el 25 de marzo del mismo año con I Am Not.​ En septiembre de 2022
-                    fueron llamados "K-pop Leaders" por la reconocida revista Billboard. <br>La música de Stray Kids
-                    consiste principalmente de K-pop, hip hop y electrónica.​ Son considerados un grupo idol
-                    "auto-producido" con los miembros casi siempre envolviéndose en la escritura y producción de
-                    canciones e incluso arreglos musicales. ​Desde el lanzamiento de "God's Menu" en 2020, la
-                    discografía de Stray Kids ha sido descrita como "mala taste"​ y "noise music", una frase
-                    inspirada en el juego de palabras de su álbum Noeasy.</p>
+                    <strong>Bang Chan, Lee Know, Changbin, Hyunjin, Han, Felix, Seungmin y I.N.</strong>​ Originalmente
+                    un grupo de nueve, el integrante Kim Woo-jin dejaría el grupo y la agencia por motivos no
+                    especificados
+                    en octubre de 2019.<br> <strong>Stray Kids</strong> lanzó su extended play predebut Mixtape el 8 de
+                    enero de 2018 e hizo su debut oficial el 25 de marzo del mismo año con I Am Not.​ En septiembre de 2022
+                    fueron llamados <strong>"K-pop Leaders"</strong> por la reconocida revista Billboard. La música de <strong>Stray
+                        Kids</strong> consiste principalmente de K-pop, hip hop y electrónica.​ Son considerados un
+                    grupo idol <strong> "auto-producido" </strong>con los miembros casi siempre envolviéndose en la escritura y
+                    producción de canciones e incluso arreglos musicales. ​Desde el lanzamiento de "God's Menu" en 2020, la
+                    discografía de <strong>Stray Kids</strong> ha sido descrita como "mala taste"​ y "noise music", una
+                    frase inspirada en el juego de palabras de su álbum Noeasy.
+                </p>
                 <!--ref wikipedia:https://es.wikipedia.org/wiki/Stray_Kids -->
             </div>
         </section>
@@ -85,19 +87,20 @@
                 <h2> Ultimo Lanzamiento: 5-Stars</h2>
             </div>
             <div class="col-xl-6 align-self-center">
-                <p> 5-Star (estilizado como ★★★★★) es el tercer álbum de estudio en coreano
-                    (cuarto en total) de la banda de chicos surcoreana Stray Kids. Fue lanzado el 2 de junio de 2023
-                    por JYP Entertainment y Republic Records, tras su séptimo EP Maxident (2022). Combinación de
-                    hip hop, pop y elementos electrónicos, 5-Star aborda temas como la singularidad, la confianza
-                    y las aspiraciones.
-                    El álbum se compone de doce temas, entre ellos el single principal
-                    "S-Class", la versión coreana de "The Sound", originalmente del álbum japonés del mismo nombre
-                    del grupo, y "Mixtape: Time Out" del Mixtape Project, y cuenta con la participación de
-                    Tiger JK en el tema "Topline". <br>
-                    En general, 5-Star recibió críticas positivas por parte de la crítica musical. Desde el punto
+                <p><strong>5-Star</strong> (estilizado como ★★★★★) es el tercer álbum de estudio en coreano
+                    (cuarto en total) de la banda de chicos surcoreana <strong>Stray Kids</strong>. Fue lanzado el 2 de
+                    junio de 2023
+                    por JYP Entertainment y Republic Records, tras su séptimo EP Maxident (2022). <strong>Combinación de
+                        hip hop, pop y elementos electrónicos, aborda temas como la singularidad, la confianza
+                        y las aspiraciones.</strong>
+                    <br> álbum se compone de doce temas, entre ellos el single principal
+                    <strong>"S-Class"</strong> y cuenta con la participación de
+                    <strong> Tiger JK en el tema "Topline".</strong><br>
+                    En general,<strong> 5-Star </strong> recibió críticas positivas por parte de la crítica musical. Desde el punto
                     de vista comercial, el álbum alcanzó el número uno en las listas nacionales de Corea del Sur,
                     Estados Unidos, entre otros, además recibir cinco veces el certificado
-                    de millón de la Korea Music Content Association (KMCA).</p>
+                    de millón de la <strong> Korea Music Content Association (KMCA).</strong>
+                </p>
                 <!--ref wikipedia:https://en.wikipedia.org/wiki/5-Star_(Stray_Kids_album) -->
             </div>
             <div class="col-xl-6">
