--- a/pages/miembros.html
+++ b/pages/miembros.html
@@ -63,59 +63,97 @@
             </div>
             <div class="integrantes">
                 <div class="Bangchan">
-                    <img src="https://picsum.photos/64" alt="">
-                    <p>Christopher Bang (Seúl, 3 de octubre de 1997), más conocido como Bang Chan (방찬), es un cantante,
-                        compositor, rapero y productor surcoreano.​ Es conocido por crear y formar parte del grupo Stray
+                    <img src="../src/Bang_Chan_1.jpg" alt="Bangchan Pose">
+                    <p>Christopher Bang (Seúl, 3 de octubre de 1997), más conocido como <strong> Bang Chan </strong>, es
+                        un cantante,
+                        compositor, rapero y productor surcoreano.​ <br> Es conocido por crear y formar parte del grupo
+                        Stray
                         Kids, donde se desempeña como líder, vocalista, rapero, letrista, compositor y productor. Antes
                         de
                         debutar en el grupo, él y otros dos integrantes, Changbin y Han, formaron un trío de hip-hop,
-                        3Racha, donde utiliza el alias CB97.
-                        Bang Chan, además, se posiciona en la lista de KOMCA con más de 150 canciones acreditadas bajo
+                        <strong> 3Racha </strong>, donde utiliza el alias CB97.
+                        <strong> Bang Chan </strong>, además, se posiciona en la lista de KOMCA con más de 150 canciones
+                        acreditadas bajo
                         su
-                        nombre.</p>
+                        nombre.
+                    </p>
                     <!--ref: https://es.wikipedia.org/wiki/Bang_Chan-->
                 </div>
                 <div class="Hyunjin">
-                    <img src="https://picsum.photos/64" alt="">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
-                        iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
-                        quidem provident ipsam laboriosam!</p>
-                </div>
-                <div class="Leeknow">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
-                        iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
-                        quidem provident ipsam laboriosam!</p>
-                    <img src="https://picsum.photos/64" alt="">
-                </div>
-                <div class="Han">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
-                        iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
-                        quidem provident ipsam laboriosam!</p>
-                    <img src="https://picsum.photos/64" alt="">
+                    <img src="../src/Hyunjin_1.jpg" alt="Hyunjin Pose">
+                    <p>Hyunjin (Seúl, 20 de marzo de 2000),​ a diferencia de los otros miembros del grupo, Hyunjin no
+                        pensó que se convertiría en un ídolo.
+                        Según él, tuvo "suerte". Mientras estaba de compras con su madre, uno de los empleados de la
+                        agencia lo detuvo, le dio una tarjeta de presentación y lo invitó a realizar una audición en JYP
+                        Entertainment. Al principio Hyunjin sintió desconfianza y solo después de confirmar que tal
+                        empresa existía hizo la audición.</p>
+                    <!--ref: https://es.wikipedia.org/wiki/Hyunjin-->
                 </div>
                 <div class="Changbin">
-                    <img src="https://picsum.photos/64" alt="">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
-                        iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
-                        quidem provident ipsam laboriosam!</p>
-                </div>
-                <div class="Seungmin">
-                    <img src="https://picsum.photos/64" alt="">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
-                        iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
-                        quidem provident ipsam laboriosam!</p>
-                </div>
-                <div class="IN">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
-                        iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
-                        quidem provident ipsam laboriosam!</p>
-                    <img src="https://picsum.photos/64" alt="">
+                    <p>Seo Chang-bin (Yongin, 11 de agosto de 1999),
+                        es un rapero, letrista, compositor y productor surcoreano. <br> Es popularmente conocido por ser
+                        miembro del grupo Stray Kids. Además, forma parte del trío 3Racha bajo el pseudónimo SpearB, que
+                        se encarga de componer y producir las canciones del grupo. Entrenó por dos años en JYP Ent antes
+                        de debutar como miembro de Stray Kids en marzo de 2018.</p>
+                    <img src="../src/Changbin_1.jpg" alt="Changbin Pose">
+                    <!--ref:https://es.wikipedia.org/wiki/Changbin-->
                 </div>
                 <div class="Felix">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt labore similique temporibus in
-                        iusto expedita magni, enim possimus voluptatibus soluta quam, saepe aut assumenda velit? Impedit
-                        quidem provident ipsam laboriosam!</p>
-                    <img src="https://picsum.photos/64" alt="">
+                    <p>Felix Lee (Sídney, 15 de septiembre de 2000), más conocido como Felix, es un
+                        rapero y bailarín australiano de origen coreano. <br> Estudió en el St Patrick's Marist College.
+                        Felix practicó taekwondo durante doce años y participó repetidamente en competencias, donde ganó
+                        premios. Además, también practicó natación. <br> En 2016, Felix fue invitado a realizar una
+                        audición para JYP Entertainment en su país natal. Sin
+                        embargo, decidió completar sus estudios antes de mudarse a Corea del Sur.</p>
+                    <img src="../src/Felix_1.jpg" alt="Felix Pose">
+                    <!-- ref:https://es.wikipedia.org/wiki/Felix_(rapero)-->
+                </div>
+                <div class="Leeknow">
+                    <img src="../src/Lee_Know_1.jpg" alt="Leeknow Pose">
+                    <p>Lee Min-ho (Gimpo, 25 de octubre de 1998), más conocido como Lee Know, es
+                        un cantante, rapero y bailarín surcoreano.<br> Antes de su debut como miembro de Stray Kids, Lee
+                        audicionó varias veces, por ejemplo para la agencia Cube Entertainment, luego apareció en un
+                        episodio Nat Geo People. Durante un tiempo, fue bailarín de apoyo en varias presentaciones de
+                        BTS y también actuó con ellos en una gira.​ Posteriormente, recibió una llamada de JYP
+                        Entertainment, ofreciéndole una audición, mientras trabajaba como bailarín y participaba en
+                        competencias de baile.</p>
+                    <!--ref:https://es.wikipedia.org/wiki/Lee_Know-->
+                </div>
+                <div class="Seungmin">
+                    <img src="../src/Seungmin_1.jpg" alt="Seungmin Pose">
+                    <p>Kim Seung-min (Seúl, 22 de septiembre de 2000), más conocido como Seungmin, es un cantante y
+                        bailarín surcoreano. <br> Su abuelo fue lanzador en el instituto, e inspirado por su ejemplo
+                        quiso
+                        convertirse en jugador de béisbol. Cuando tenía 9 años, pero
+                        debido al deterioro de la situación económica de la familia, tuvo que abandonar su
+                        sueño.Seungmin empezó a interesarse activamente por la música cuando estaba en cuarto grado,
+                        donde
+                        participó en un concurso de poesía infantil y cantó en un coro.</p>
+                    <!--ref: https://es.wikipedia.org/wiki/Seungmin-->
+                </div>
+                <div class="IN">
+                    <p>Yang Jeong-in (Busan, 8 de febrero de 2001), más conocido
+                        como I.N, es un cantante y bailarín surcoreano. <br> A los siete años, fue descubierto por un
+                        reclutador de modelos que lo invitó a
+                        realizar una audición, que aprobó con éxito. Sin embargo, abandonó el modelaje al año siguiente.
+                        <br>En esa época comenzó a interesarse por la música, llevando a sus padres a contratar un
+                        maestro.
+                        Jeongin se unió a JYP Entertainment como aprendiz en 2016.
+                    </p>
+                    <img src="../src/IN_1.jpg" alt="IN Pose">
+                    <!--ref: https://es.wikipedia.org/wiki/I.N-->
+                </div>
+                <div class="Han">
+                    <p>Han Ji-sung (Incheon, 14 de septiembre de 2000),
+                        es un rapero, letrista, compositor y productor surcoreano. <br> Además, forma parte del trío
+                        3Racha
+                        bajo el pseudónimo J.One. <br> Hizo una audición para JYP
+                        Entertainment por accidente. Según Han, la idea de ir a esa audición fue de su amigo, con el que
+                        fueron juntos a audiciones para otras compañías. En el grupo de jóvenes con el que acudió a la
+                        sala donde se hacían las audiciones, Han era el único que rapeaba. Y entonces le pidieron que
+                        regresara para una segunda audición.​ </p>
+                    <img src="../src/Han_1.jpg" alt="Han Pose">
+                    <!--ref:https://es.wikipedia.org/wiki/Han_(rapero)-->
                 </div>
             </div>
         </section>
