Actualización SEO y SASS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <html lang="es">
     <link rel="shortcut icon" href="./src/straykidslogo.png">
+    <meta name="description" content="Información general sobre Stray Kids y su ultimo album de estudio 5 Star">
+    <meta name="keywords" content="5 Star, Album, Integrantes, Stray Kids">
     <title>Stray Kids</title>
     <script src="https://kit.fontawesome.com/5c115362c8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -104,7 +106,7 @@
                 <!--ref wikipedia:https://en.wikipedia.org/wiki/5-Star_(Stray_Kids_album) -->
             </div>
             <div class="col-xl-6">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/JsOOis4bBFg?si=gpouJFakC-1-wJ5-"
+                <iframe width="100%" height="300" src="https://www.youtube.com/embed/JsOOis4bBFg?si=gpouJFakC-1-wJ5-"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
