--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <html lang="es">
     <link rel="shortcut icon" href="../src/straykidslogo.png">
-    <title>Stray Kids</title>
+    <meta name="description" content="Discografía de Stray Kids, escuchar ultimos cuatro albums de estudio desde spotify">
+    <meta name="keywords" content="Musica, Album, 5 Star, Skz Replay, Maxident, Oddinary, Stray Kids">
+    <title>Discografía Stray Kids</title>
     <script src="https://kit.fontawesome.com/5c115362c8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,7 +61,7 @@
     <main class="container">
         <section id="Discografia" class="row">
             <div class="titulo_disco">
-                <h2>Discografía</h2>
+                <h1>Discografía</h1>
             </div>
             <div class="col-xl-3">
                 <iframe style="border-radius:12px"
