--- a/pages/miembros.html
+++ b/pages/miembros.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <html lang="es">
     <link rel="shortcut icon" href="../src/straykidslogo.png">
-    <title>Stray Kids</title>
+    <meta name="description" content="Información resumida sobre cada miembro de Stray Kids, fecha de nacimiento y debut">
+    <meta name="keywords" content="Changbin, Bangchan, Felix, Hyunjin, IN, Han, Leeknow, Seungmin, Stray Kids">
+    <title>Miembros Stray Kids</title>
     <script src="https://kit.fontawesome.com/5c115362c8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,7 +61,7 @@
     <main class="container">
         <section id="Miembros">
             <div class="titulo_miembros">
-                <h2>Miembros</h2>
+                <h1>Miembros</h1>
             </div>
             <div class="integrantes">
                 <div class="row">
