--- a/pages/tour.html
+++ b/pages/tour.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <html lang="es">
     <link rel="shortcut icon" href="../src/straykidslogo.png">
-    <title>Stray Kids</title>
+    <meta name="description" content="Fechas, locaciones y donde comprar los tickets para los conciertos de Stray Kids">
+    <meta name="keywords" content="World Tour, fechas, locaciones, Stray Kids, Tickets">
+    <title>World Tour Stray Kids</title>
     <script src="https://kit.fontawesome.com/5c115362c8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -58,7 +60,7 @@
     </header>
     <main class="container">
         <div class="titulo_tour">
-            <h2>World Tour</h2>
+            <h1>World Tour</h1>
         </div>
         <div class="fechas row">
             <div class="col-md-6">
