--- a/pages/contenido.html
+++ b/pages/contenido.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <html lang="es">
     <link rel="shortcut icon" href="../src/straykidslogo.png">
-    <title>Stray Kids</title>
+    <meta name="description" content="Fotos de Stray Kids del album 5 Star, videos musicales y contenido tras camara">
+    <meta name="keywords" content="Fotos, Videos, 5 Star, Musica, Stray Kids">
+    <title>Multimedia Stray Kids</title>
     <script src="https://kit.fontawesome.com/5c115362c8.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,7 +61,7 @@
     <main class="container">
         <section class="Fotos">
             <div class="titulo_contenido">
-                <h2> Fotos </h2>
+                <h1> Fotos </h1>
             </div>
             <div class="row">
                 <div class="col-xl-3 d-flex justify-content-center">
